--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,1 +1,12 @@
 <h1>Items</h1>
+
+<div id="items">
+    <% @items.each do |item| %>
+        <%= render item %>
+        <p>
+            <%= link_to "Show this item", item %>
+        </p>    
+    <% end %>
+</div>
+
+<%= link_to "Add New Item", new_item_path %>
